# migrated-python-basics-2021

./: My Poetry commands reference.docx  README.md  pyproject.toml
01_python_basics/: task1_hello.py  task2_angle_converter.py  task3_dataformats.py  task4_temperature_conversions.py  task4_temperature_converter.py
02_pandas_numpy/: numpy_tutorial.py  pandas_tutorial.py
02_pandas_numpy/02_1_hochsteuerland/: task_2_1_hochsteuerland.py
02_pandas_numpy/02_1_hochsteuerland/data/: einkommen.xlsx
02_pandas_numpy/02_2_corona_app/: custom_exceptions.py  options_formulas.py  task2_2_corona_app.py
03_python_oop/: task1_classes_objects.py  task2_person_class_init_methods.py  task3_access_modifiers.py  task4_inheritance_overwriting.py  task5_abstract_classes_interfaces.py  task6_fahrrad_app.py
03_python_oop/task7_fahren_spiel_data/: custom_exceptions.py  driver_class.py  main_moving_game.py  moves_logic.py  transport_classes.py
04_pandera_df_validation/: pandera_tutorial.py  pandera_tutorial_class-based.py
help_infos/: Python- How to solve the numpy ImportError on Apple Silicon- - Stack Overflow.url
