[tool.poetry]
name = "python-basics-2021"
version = "0.1.0"
description = "These are my tutorials from SMS digital that I have done at the beginning of my professional training in October 2021"
authors = ["Ilia Nikolaenko <aili70@duck.com>"]
readme = "README.md"
packages = [{ include = "python_basics_2021" }]

[tool.poetry.dependencies]
python = "^3.9"

# Data analysis training
numpy = "^1.19.5"
pandas = "^1.3.1"
openpyxl = "^3.0.10"  # a library to read and write excel files
matplotlib = "^3.6.2"
scipy = "^1.7.3"

# Data validation
pandera = "^0.8.0"

# Web API
requests = "^2.28.1"

# Misc
pydantic = "^1.8.2"
APScheduler = "^3.7.0"

# Logging
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
# Testing and Coverage
pylint = "^2.8.3"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
